--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,10 +22,7 @@ jobs:
         go-version: '1.23.2'
     
     - name: Install dependencies
-      run: 
-        go get .
-        go get github.com/cloudflare/cloudflare-go
-        go get github.com/joho/godotenv
+      run: go get .
 
     - name: Build
       run: go build -v ./...
