--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -46,7 +46,7 @@ archives:
       {{- else }}{{ .Arch }}{{ end }}_
       {{- .Version -}}
     files:
-      - LICENSE.md
+      - LICENSE
     builds:
       - goGenerateCFToken
     formats: ["zip"]
