feat(project): update tests, documentation, and refactor
This commit completes an update to utilize the latest version (v4) of their Go SDK.
- Adds package-level documentation
- Improves test coverage
- Standardizes comments
- Refactors various functionality
- Updates Go version and dependencies

--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -144,6 +144,7 @@ linters:
         - c
         - ctx
         - i
+        - v
       ignore-decls:
         - c echo.Context
         - t testing.T
@@ -158,6 +159,7 @@ linters:
         - r http.Request
         - r *net/http/Request
         - r *mux.Router
+        - v Viper
 
   ######################################################################################################
   # Defines a set of rules to ignore issues.
