fix(version): export version for goreleaser to dynamically adjust
- Export the `version` variable to enable Goreleaser to dynamically update it at build time.

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -16,7 +16,7 @@ builds:
       - arm
       - arm64
     ldflags:
-      - -s -w -X github.com/nicholas-fedor/gogeneratecftoken/cmd.version={{.Version}}
+      - -s -w -X github.com/nicholas-fedor/gogeneratecftoken/cmd.Version={{.Version}}
 
 archives:
   - id: default
