feat: replace hardcoded version with pkg/version
- Introduce pkg/version for dynamic version handling
- Implement GetVersionInfo with debug.ReadBuildInfo and GoReleaser support
- Update root.go, root_test.go for dynamic versioning
- Update .goreleaser.yaml for pkg/version variables

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -16,7 +16,10 @@ builds:
       - arm
       - arm64
     ldflags:
-      - -s -w -X github.com/nicholas-fedor/gogeneratecftoken/cmd.Version={{.Version}}
+      - -s -w
+      - -X github.com/nicholas-fedor/gogeneratecftoken/pkg/version.Version={{.Version}}
+      - -X github.com/nicholas-fedor/gogeneratecftoken/pkg/version.Commit={{.Commit}}
+      - -X github.com/nicholas-fedor/gogeneratecftoken/pkg/version.Date={{.Date}}
 
 archives:
   - id: default
