chore(ci): refactor CI/CD pipelines and reorganize project configuration
* Refactor CircleCI configuration to use dynamic path-based filtering for optimized job execution
* Update GitHub Actions build workflow to support dry-run mode, add Syft for SBOM generation, and improve artifact attestation
* Remove redundant lint, release-dev, and release-prod workflows, consolidating linting into lint-go.yaml
* Modify pull-request workflow to trigger on specific file patterns with refined permissions
* Update test workflow to use flexible Go version 1.24.x
* Relocate configuration files (.cobra.yaml, .golangci.yaml, .goreleaser.yaml, .mockery.yaml) to build/ directory
* Move config.yaml.template to examples/ directory
* Update .gitignore to include /dist and gogeneratecftoken
* Enhance README.md with table of contents, detailed installation instructions, and improved usage guidance
* Update go.mod and go.sum to use golang.org/x/sys@v0.35.0 and golang.org/x/text@v0.28.0

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -3,19 +3,19 @@ name: Build
 on:
   workflow_call:
     inputs:
-      snapshot:
-        description: "Whether to run in snapshot mode"
+      dry-run:
+        description: "Run in test mode without publishing artifacts"
         required: false
-        type: boolean
         default: false
+        type: boolean
 
 jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
     permissions:
-      packages: write
       contents: write
+      packages: write
       attestations: write
       id-token: write
     env:
@@ -32,6 +32,9 @@ jobs:
         with:
           go-version: 1.24.x
 
+      - name: Install Syft for SBOM generation
+        run: curl -sSfL https://raw.githubusercontent.com/anchore/syft/main/install.sh | sh -s -- -b /usr/local/bin
+
       - name: Import GPG key
         uses: crazy-max/ghaction-import-gpg@e89d40939c28e39f97cf32126055eeae86ba74ec
         with:
@@ -43,13 +46,25 @@ jobs:
         with:
           distribution: goreleaser
           version: "~> v2"
-          args: release --clean ${{ inputs.snapshot && '--snapshot' || '' }}
+          args: release --config build/goreleaser/goreleaser.yaml --snapshot --clean ${{ fromJson(inputs.dry-run) && '--skip=publish' || '' }}
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
+          GITHUB_TOKEN: ${{ github.token }}
+          DRY_RUN: ${{ inputs.dry-run }}
+
+      - name: Upload binary SBOMs
+        if: ${{ !fromJson(inputs.dry-run) }}
+        uses: actions/upload-artifact@de65e23aa2b7e23d713bb51fbfcb6d502f8667d8
+        with:
+          name: binary-sboms
+          path: dist/*.sbom
+          if-no-files-found: warn
 
       - name: Generate artifact attestation
-        uses: actions/attest-build-provenance@e8998f949152b193b063cb0ec769d69d929409be # v2
-        if: success()
+        if: ${{ !fromJson(inputs.dry-run) }}
+        uses: actions/attest-build-provenance@7a3eb4a84e7d1c943af9ac9bd5fe7e5a0fdfb18f
         with:
-          subject-path: "dist/**/*"
+          subject-checksums: ./dist/checksums.txt
+
+      - name: Clean up dist directory
+        if: always()
+        run: rm -rf dist
