--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,33 +1,26 @@
+# Use the latest 2.1 version of CircleCI pipeline process engine.
+# See: https://circleci.com/docs/configuration-reference
 version: 2.1
 
-jobs:
-  build:
-    docker:
-      - image: cimg/go:1.24.5@sha256:c5ca0149ba30b60b85e229441e10e5666a00cebf0d6ad235d6f6839d19e2056e
-    steps:
-      - checkout
-      - restore_cache:
-          keys:
-            - go-mod-v4-{{ checksum "go.sum" }}
-      - run:
-          name: Install Dependencies
-          command: go mod download
-      - save_cache:
-          key: go-mod-v4-{{ checksum "go.sum" }}
-          paths:
-            - "/go/pkg/mod"
-      - run:
-          name: Run tests
-          command: |
-            mkdir -p /tmp/test-reports
-            gotestsum --junitfile /tmp/test-reports/unit-tests.xml -- -race -coverprofile=coverage.txt -covermode=atomic ./...
-      - run:
-          name: Upload coverage to Codecov
-          command: bash <(curl -s https://codecov.io/bash) -f coverage.txt
-      - store_test_results:
-          path: /tmp/test-reports
+# Enable dynamic config for path-based filtering.
+setup: true
 
+# Orbs for reusable packages.
+orbs:
+  path-filtering: circleci/path-filtering@2.0.1
+
+# Orchestrate jobs using workflows.
+# See: https://circleci.com/docs/workflows/ & https://circleci.com/docs/configuration-reference/#workflows
 workflows:
-  build-test:
+  setup-workflow: # This workflow checks changed files and decides whether to continue.
     jobs:
-      - build
+      - path-filtering/filter:
+          name: check-updated-files
+          mapping: | # Map file patterns to pipeline parameters (true/false).
+            cmd/.* run-tests true
+            pkg/.* run-tests true
+            main.go run-tests true
+            go.mod run-tests true
+            go.sum run-tests true
+          base-revision: main # Compare against the base branch.
+          config-path: .circleci/continue-config.yml # Path to the continuation config if conditions match.
