--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -3,18 +3,21 @@ name: Pull Request
 on:
   workflow_dispatch: {}
   pull_request:
-    branches:
-      - main
-
-permissions:
-  contents: read
-  packages: write
-  attestations: write
-  id-token: write
+    paths:
+      - cmd/**
+      - pkg/**
+      - go.mod
+      - go.sum
+      - main.go
+      - main_test.go
 
 jobs:
   lint:
-    uses: ./.github/workflows/lint.yaml
+    uses: ./.github/workflows/lint-go.yaml
+    permissions:
+      contents: read
 
   test:
     uses: ./.github/workflows/test.yaml
+    permissions:
+      contents: read
