chore(ci): refactor CI/CD pipelines and reorganize project configuration (#148)
* Refactor CircleCI configuration to use dynamic path-based filtering for optimized job execution
* Update GitHub Actions build workflow to support dry-run mode, add Syft for SBOM generation, and improve artifact attestation
* Remove redundant release-dev and release-prod workflows
* Modify pull-request workflow to trigger on specific file patterns with refined permissions
* Update test workflow to use flexible Go version 1.24.x
* Relocate configuration files (.cobra.yaml, .golangci.yaml, .goreleaser.yaml, .mockery.yaml) to build/ directory
* Move config.yaml.template to examples/ directory
* Update .gitignore to include /dist and gogeneratecftoken
* Enhance README.md with table of contents, detailed installation instructions, and improved usage guidance
* Update go.mod and go.sum to use golang.org/x/sys@v0.35.0 and golang.org/x/text@v0.28.0

--- a/.github/workflows/lint-go.yaml
+++ b/.github/workflows/lint-go.yaml
@@ -1,4 +1,4 @@
-name: Lint
+name: Lint Go
 
 on:
   workflow_call:
@@ -17,7 +17,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@8e57b58e57be52ac95949151e2777ffda8501267
         with:
-          go-version: "1.24.6"
+          go-version: 1.24.x
 
       - name: Install dependencies
         run: go mod download
@@ -25,7 +25,7 @@ jobs:
       - name: Run golangci-lint
         uses: golangci/golangci-lint-action@9511564208289d6c9378c8852eec4ca6f9431220
         with:
-          args: --timeout=5m
+          args: --timeout=5m --config=build/golangci-lint/golangci.yaml
 
       - name: Format Go code
         run: |
