--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -46,13 +46,13 @@ jobs:
         with:
           distribution: goreleaser
           version: "~> v2"
-          args: release --config build/goreleaser/goreleaser.yaml --snapshot --clean ${{ fromJson(inputs.dry-run) && '--skip=publish' || '' }}
+          args: release --config build/goreleaser/goreleaser.yaml --snapshot --clean ${{ inputs.dry-run && '--skip=publish' || '' }}
         env:
           GITHUB_TOKEN: ${{ github.token }}
           DRY_RUN: ${{ inputs.dry-run }}
 
       - name: Upload binary SBOMs
-        if: ${{ !fromJson(inputs.dry-run) }}
+        if: ${{ !inputs.dry-run }}
         uses: actions/upload-artifact@de65e23aa2b7e23d713bb51fbfcb6d502f8667d8
         with:
           name: binary-sboms
@@ -60,7 +60,7 @@ jobs:
           if-no-files-found: warn
 
       - name: Generate artifact attestation
-        if: ${{ !fromJson(inputs.dry-run) }}
+        if: ${{ !inputs.dry-run }}
         uses: actions/attest-build-provenance@ff19f402b6e212671813b2ebe231d8a7c81ec049
         with:
           subject-checksums: ./dist/checksums.txt
