--- a/.github/workflows/lint-go.yaml
+++ b/.github/workflows/lint-go.yaml
@@ -17,8 +17,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@4dc6199c7b1a012772edbd06daecab0f50c9053c
         with:
-          check-latest: true
-          go-version: 1.25.x
+          go-version-file: "go.mod"
 
       - name: Install dependencies
         run: go mod download
