--- a/.github/workflows/security.yaml
+++ b/.github/workflows/security.yaml
@@ -48,6 +48,7 @@ jobs:
           output-format: sarif
           output-file: ${{ env.OUTPUT_FILE }}
           go-version-file: go.mod
+          go-version-input: ""
 
       - name: Upload SARIF file
         uses: github/codeql-action/upload-sarif@fe4161a26a8629af62121b670040955b330f9af2 # v4
